--- a/action.yml
+++ b/action.yml
@@ -37,6 +37,26 @@ inputs:
     description: 'Whether or not to delete head branch after merges'
     required: false
     default: 'false'
+  BRANCH_PROTECTION_NAME:
+    description: 'Branch name pattern for branch protection rule'
+    required: false
+    default: 'master'
+  BRANCH_PROTECTION_REQUIRED_REVIEWERS:
+    description: 'Number of required reviewers for branch protection rule'
+    required: false
+    default: '1'
+  BRANCH_PROTECTION_DISMISS:
+    description: 'Dismiss stale pull request approvals when new commits are pushed'
+    required: false
+    default: 'true'
+  BRANCH_PROTECTION_CODE_OWNERS:
+    description: 'Require review from Code Owners'
+    required: false
+    default: 'true'
+  BRANCH_PROTECTION_ENFORCE_ADMINS:
+    description: 'Enforce branch protection rules for repo admins'
+    required: false
+    default: 'false'
   TOKEN:
     description: 'Personal access token with Repo privileges'
     required: true
@@ -53,4 +73,9 @@ runs:
     - ${{ inputs.MERGE_COMMIT }}
     - ${{ inputs.REBASE_MERGE }}
     - ${{ inputs.DELETE_HEAD }}
+    - ${{ inputs.BRANCH_PROTECTION_NAME }}
+    - ${{ inputs.BRANCH_PROTECTION_REQUIRED_REVIEWERS }}
+    - ${{ inputs.BRANCH_PROTECTION_DISMISS }}
+    - ${{ inputs.BRANCH_PROTECTION_CODE_OWNERS }}
+    - ${{ inputs.DELETE_HBRANCH_PROTECTION_ENFORCE_ADMINSEAD }}
     - ${{ inputs.TOKEN }}
